--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(rgba(0, 39, 76, 0.6), rgba(0, 39, 76, 0.6)),
-        url('/images/northcampus.jpg');
+        url('../images/northcampus.jpg');
     background-size: cover;
     position: relative;
     display: flex;
