--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ body {
 .back {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(0, 39, 76, 0.6), rgba(0, 39, 76, 0.6)),
-        url('../images/northcampus.jpg');
+    background-image: linear-gradient(rgba(0, 39, 76, 0.8), rgba(0, 39, 76, 0.8)),
+        url('/images/northcampus.jpg');
     background-size: cover;
     position: relative;
     display: flex;
