--- a/css/aboutMe_style.css
+++ b/css/aboutMe_style.css
@@ -7,9 +7,7 @@ body {
 }
 
 body {
-    background-image: linear-gradient(rgba(0, 39, 76, 0.8), rgba(0, 39, 76, 0.8)), url('/images/northcampus.jpg');
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: #00274C;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -39,35 +37,52 @@ header {
     text-decoration: none;
 }
 
+
 nav {
     height: 80px;
     background: linear-gradient(rgba(255, 203, 5, 0.6), rgba(255, 203, 5, 0.6));
     display: flex;
-    padding: 0 6% 0 6%;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
 .nav-links {
-    text-align: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.nav-links ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 3rem;
 }
 
 .nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px 8px 12px;
-    position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .nav-links ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 14px;
+    padding: 8px 12px;
+    transition: all 0.3s ease;
+}
+.nav-links ul li a:hover {
+    color: #00274C;
 }
 
 .nav-links a.active {
     text-decoration: underline;
 }
+
 
 .content {
     flex: 1;
@@ -144,10 +159,11 @@ iframe {
     background-color: #00274C;
     color: white;
     border-radius: 50px;
-    padding: 14px 14px 14px 14px;
+    padding: 8px 16px;
     font-size: 14px;
     border: none;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .dropdown {
@@ -163,12 +179,14 @@ iframe {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     border-radius: 10px;
-    transform: translateX(-25%);
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100%;
 }
 
 .dropdown-content a {
-    color: #fff;
-    padding: 12px 16px 12px 16px;
+    color: white;
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: center;
